# maigre

./: .gitignore  .maigre-style.c.swp  AUTHORS  COPYING  Maigre.sln  Makefile  Makefile.am  README  autogen.sh  configure  configure.ac  maigre.gtkrc
Maigre/: Maigre.csproj  Makefile  Makefile.am  Theme.cs
Maigre/Cairo/: ColorExtensions.cs  ContextExtensions.cs  Corner.cs  RectangleExtensions.cs
Maigre/Maigre/: DrawContext.cs  RcStyle_Template.cs  Style_Template.cs  Theme.cs  ThemeModule.cs  Theme_Template.cs
Maigre/Maigre.Osx/: OsxRcStyle.cs  OsxStyle.cs  OsxTheme.cs
libmaigre/: Makefile  Makefile.am  Makefile.in  libmaigre.cproj  libmaigre.md.pc  maigre-gtk-style-generator  maigre-mono-bridge.c  maigre-mono-bridge.h  maigre-rc-style.c  maigre-rc-style.h  maigre-rc-style.template.c  maigre-style.c  maigre-style.h  maigre-style.template.c  maigre-theme-module.c
maigre-codegen/: Makefile  Makefile.am  maigre-codegen.mdproj  maigre-codegen.py
